--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body{
     margin:0;
     padding:0;
     background-color: #eff3f7;
-    height: 100;
+    height: 100%;
 }
 
 html,
@@ -35,10 +35,11 @@ body,
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    max-height: 500px;
+    height : 40%;
     color:darkgrey;
     -webkit-user-drag: element;
     cursor: -webkit-grab;
+    font-size: 0.1rem;
 }
 
 .movie .title{
@@ -46,7 +47,7 @@ body,
 }
 
 .movie .genres{
-    max-height: 100px;
+    max-height: 30%;
     overflow-y: auto;
 }
 
@@ -56,15 +57,15 @@ body,
 
 .movie img{
     position: relative;
-    top: -50px;
-    max-width: 150px;
+    top: -10%;
+    width:25%;
     margin-right: 20px;
     box-shadow: 0px 5px 5px 0px darkgrey;
 }
 
 
 .movie .summary{
-    max-height: 200px;
+    height:30%;
     overflow-y: auto;
     -webkit-user-select: none;
 }
