--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body,
     height:100%;
     display: flex;
     justify-content: center;
+    font-size:5px;
 }
 .loader{
     width:100%;
@@ -26,20 +27,21 @@ body,
     padding: 50px;
     width: 80%;
     padding-top: 50px;
+    font-size: 0.5em;
 }
 
 .movies .movie{
-    width: 45%;
+    width: 90%;
     background-color: white;
-    margin-bottom: 70px;
+    margin-bottom: 30%;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    height : 40%;
+    height : 50%;
     color:darkgrey;
     -webkit-user-drag: element;
     cursor: -webkit-grab;
-    font-size: 0.1rem;
+    font-size: 0.01vh;
 }
 
 .movie .title{
@@ -58,9 +60,9 @@ body,
 .movie img{
     position: relative;
     top: -10%;
-    width:25%;
-    margin-right: 20px;
-    box-shadow: 0px 5px 5px 0px darkgrey;
+    width:40%;
+    margin-right: 10%;
+    box-shadow: 0em 0.5em 0.5em 0em darkgrey;
 }
 
 
