--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body,
     height:100%;
     display: flex;
     justify-content: center;
-    font-size:5px;
+    font-size:5vw;
 }
 .loader{
     width:100%;
@@ -24,22 +24,19 @@ body,
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 50px;
+    padding: 10%;
     width: 80%;
-    padding-top: 50px;
-    font-size: 0.5em;
 }
 
 .movies .movie{
-    width: 100%;
+    width: 45%;
     background-color: white;
-    margin-bottom: 30%;
+    margin-bottom: 10%;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     height : 50%;
     color:darkgrey;
-    -webkit-user-drag: element;
     font-size: 0.01em;
 }
 
