--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -1,34 +1,5 @@
-body{
-    margin:0;
-    padding:0;
-    background-color: #eff3f7;
-    height: 100%;
-}
 
-html,
-body,
-.container{
-    height:100%;
-    display: flex;
-    justify-content: center;
-    font-size:5vw;
-}
-.loader{
-    width:100%;
-    height:100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.movies{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 10%;
-    width: 80%;
-}
-
-.movies .movie{
+.movie{
     width: 45%;
     background-color: white;
     margin-bottom: 10%;
@@ -38,6 +9,7 @@ body,
     height : 50%;
     color:darkgrey;
     font-size: 0.01em;
+    cursor: pointer;
 }
 
 .movie .title{
